--- a/core/build.gradle
+++ b/core/build.gradle
@@ -25,7 +25,7 @@ dependencies {
       exclude(group: "com.fasterxml.jackson.core")
   }
 
-  // Spark 1.2.0 release
+  // Spark
   // - core
   compile "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
   // - SQL component
@@ -98,4 +98,3 @@ integTest {
     systemProperty "sparkling.assembly.jar", "${project(":sparkling-water-assembly").configurations.shadow.artifacts.file.join(',')}"
     systemProperty "sparkling.itest.jar", "${integTestJar.archivePath}"
 }
-
